Updated html pages and crud for mongo

--- a/src/html/404.html
+++ b/src/html/404.html
@@ -13,14 +13,14 @@
         <div
             style=" padding:5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column; border: 2px solid #19819Fff; text-align: center;">
 
-            <h1 style="color:#AEBEBEff"> GMA api 🔥</h1>
+            <h1 style="color:#AEBEBEff"> gmdevapi 🔥</h1>
 
             <h4 style="padding-top: 5px;color:#AEBEBEff; border-top: 1px solid white;"> 404 not found </h4>
 
 
             <h1 style="color:#AEBEBEff">  💔</h1>
 
-            <a href="/">HOME</a>            
+            <a href="/api/">HOME</a>            
 
         </div>
     </div>
