--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -4,37 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>Contact</title>
 </head>
 
 <body>
     <div style=" width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column;">
 
-        <div
-            style=" padding:5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column; border: 2px solid #19819Fff; text-align: center;">
+        <div style=" padding:5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column; border: 2px solid #19819Fff; text-align: center;">
 
-            <nav
-                style=" width: 100%; height: 100%; background-color: black; display: flex; align-self: center; align-items: center; flex-wrap: wrap; flex-direction: row; text-align: center;">
+            <nav style=" width: 100%; height: 100%; background-color: black; display: flex; align-self: center; align-items: center; flex-wrap: wrap; flex-direction: row; text-align: center;">
 
-
-                <li style="flex-grow: 1; border: 3px solid 19819Fff;"><a href="/About"
+                <li style="flex-grow: 1; border: 3px solid 19819Fff;"><a href="/api/About"
                         style="color: #025B79ff; font-weight:200; font-size:x-large; cursor: pointer; ">About</a></li>
-                <li style="flex-grow: 1; border: 3px solid 19819Fff; "><a href="/Endpoints"
+                <li style="flex-grow: 1; border: 3px solid 19819Fff; "><a href="/api/Endpoints"
                         style="color: #025B79ff; font-weight:200; font-size:x-large; cursor: pointer;  ">Endpoints</a>
                 </li>
-                <li style="flex-grow: 1; border: 1px solid 19819Fff; "><a href="/Contact"
+                <li style="flex-grow: 1; border: 1px solid 19819Fff; "><a href="/api/Contact"
                         style="color: #025B79ff; font-weight:200; font-size:x-large; cursor: pointer;  ">Contact</a>
                 </li>
 
             </nav>
 
-            <h1 style="color:#AEBEBEff"> GMA api 🔥</h1>
+            <h1 style="color:#AEBEBEff"> gmdevapi 🔥</h1>
             <h1 style="color:#AEBEBEff ; border-top: 1px solid white"> Contact</h1>
 
             <div
                 style=" padding-bottom: 5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column;  text-align: center;">
 
-                <a href="https://linktr.ee/_GMDev" style="flex-grow: 1; color: green"> https://linktr.ee/_GMDev</a>
+                <a href="https://linktr.ee/_GMDev" style="flex-grow: 1; color: green"> https://linktr.ee/codedumpsterfire</a>
 
             </div>
 
