--- a/src/html/endpoints.html
+++ b/src/html/endpoints.html
@@ -4,77 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>Endpoints</title>
 </head>
 
 <body>
     <div style=" width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column;">
+        <div style=" padding:5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column; border: 2px solid #19819Fff; text-align: center;">
 
-        <div
-            style=" padding:5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column; border: 2px solid #19819Fff; text-align: center;">
+            <nav style=" width: 100%; height: 100%; background-color: black; display: flex; align-self: center; align-items: center; flex-wrap: wrap; flex-direction: row; text-align: center;">
 
-            <nav
-                style=" width: 100%; height: 100%; background-color: black; display: flex; align-self: center; align-items: center; flex-wrap: wrap; flex-direction: row; text-align: center;">
-
-
-                <li style="flex-grow: 1; border: 3px solid 19819Fff;"><a href="/About"
+                <li style="flex-grow: 1; border: 3px solid 19819Fff;"><a href="/api/About"
                         style="color: #025B79ff; font-weight:200; font-size:x-large; cursor: pointer; ">About</a></li>
-                <li style="flex-grow: 1; border: 3px solid 19819Fff; "><a href="/Endpoints"
+                <li style="flex-grow: 1; border: 3px solid 19819Fff; "><a href="/api//Endpoints"
                         style="color: #025B79ff; font-weight:200; font-size:x-large; cursor: pointer;  ">Endpoints</a>
                 </li>
-                <li style="flex-grow: 1; border: 1px solid 19819Fff; "><a href="/Contact"
+                <li style="flex-grow: 1; border: 1px solid 19819Fff; "><a href="/api/Contact"
                         style="color: #025B79ff; font-weight:200; font-size:x-large; cursor: pointer;  ">Contact</a>
                 </li>
 
             </nav>
 
-            <h1 style="color:#AEBEBEff"> GMA api 🔥</h1>
+            <h1 style="color:#AEBEBEff"> gmdevapi 🔥</h1>
             <h1 style="color:#AEBEBEff ; border-top: 1px solid white"> Endpoints</h1>
 
-            <div style=" padding-bottom: 5px; width: 100%; height: 100%; background-color: #242a36; display: flexbox; flex-direction: column;  text-align: center; align-self: center;">
-
-            <label style="color:green;" > HTTP GET GMA API STANDARD ROUTES </label>
-            <ul style="margin: 10px; background-color: #101730ff;  color:#AEBEBEff; align-self: center; text-align: center; list-style:square;">
-
-                <label style="color:#AEBEBEff;" > Home </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/</li>
-
-                <label style="color:#AEBEBEff;" > About </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/About</li>
-
-                <label style="color:#AEBEBEff;" > Endpoints </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/Endpoints</li>
-
-                <label style="color:#AEBEBEff;" > Contact </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/Contact</li>
-            </ul>
-
-            <label style="color:green;" > HTTP GET 3rd PARTY ROUTES </label>
-            <ul style="margin: 10px; background-color: #101730ff; color:#AEBEBEff; align-self: center; text-align: center; list-style:square;">
-
-                <label style="color:#AEBEBEff;" > Spotify </label>
-                <li style="background-color: black; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Spotify</li>
-                <li style="background-color: black; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Spotify/:artistID</li>
-
-                <label style="color:#AEBEBEff;" > Arduino </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Arduino/ToggleON</li>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Arduino/ToggleOFF</li>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Arduino/STATUS</li>
-
-                <label style="color:#AEBEBEff;" > OpenAI </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/OpenAi/:userPrompt</li>
-
-                <label style="color:#AEBEBEff;" > Financial API's </label>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Stock/:symbol/:date/:adjusted</li>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Crypto/:cryptoticker/:adjusted</li>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Nft/:collectionName</li>
-                <li style="background-color: black; color:#AEBEBEff; padding-top: 5px; padding-bottom: 5px;"> https://gmapps-api-v1.gmdev.workers.dev/api/Gov</li>
-            </ul>
-
-
-            </div>
+        </div>
         </div>
     </div>
 </body>
-
 </html>
